--- a/overlay/packages/apps/CarrierConfig/res/xml/vendor_miui.xml
+++ b/overlay/packages/apps/CarrierConfig/res/xml/vendor_miui.xml
@@ -19,6 +19,20 @@
             <item value="23801" />
         </string-array>
     </carrier_config>
+    <carrier_config mcc="260">
+        <string-array name="carrier_metered_apn_types_strings" num="4">
+            <item value="default" />
+            <item value="dun" />
+            <item value="supl" />
+            <item value="fota" />
+        </string-array>
+        <string-array name="carrier_metered_roaming_apn_types_strings" num="4">
+            <item value="default" />
+            <item value="dun" />
+            <item value="supl" />
+            <item value="fota" />
+        </string-array>
+    </carrier_config>
     <carrier_config mcc="268" mnc="06">
         <string name="default_vm_number_string">+351962000000</string>
     </carrier_config>
@@ -163,9 +177,6 @@
         <string-array name="non_roaming_operator_string_array" num="1">
             <item value="27202" />
         </string-array>
-    </carrier_config>
-    <carrier_config mcc="466" mnc="01">
-        <boolean name="carrier_default_wfc_ims_enabled_bool" value="true" />
     </carrier_config>
     <carrier_config mcc="466" mnc="05">
         <boolean name="carrier_default_wfc_ims_enabled_bool" value="true" />
